--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,7 +245,7 @@ section {
   width: 410px;
   display: inline-block;
   vertical-align: top;
-  text-align: left;
+  text-align: center;
   margin: 30px 00 60px;
   color: white;
 }
