--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,17 +52,18 @@ footer {
   background: #fce138;
   width: 100%;
   padding: 40px 35px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 footer h2 {
-  display: inline;
   color: #024e76;
   font-size: 30px;
   margin: 0;
 }
 
 footer div {
-  float: right;
   line-height: 1.5;
   text-align: right;
 }
@@ -78,22 +79,20 @@ section {
 /* Hero Style Start */
 .hero {
   background-image: url("../images/hero-bg.jpg");
-  height: 600px;
   background-size: cover;
   background-position: center;
-  position: relative;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
-/* Hero Style End */
 
 .hero-form {
   border: 3px solid #024e76;
   background-color: #fce138;
   padding: 20px;
-  width: 500px;
   color: #024e76;
-  position: absolute;
-  bottom: 120px;
-  right: 140px;
+  width: 40%;
+  margin: 3.5%;
 }
 
 .hero-form h3 {
@@ -126,11 +125,23 @@ section {
   padding: 10px 20px;
   font-size: 16px;
 }
+.hero-cta {
+  width: 35%;
+  text-align: right;
+  margin: 3.5%;
+  color: #fff;
+  font-size: 18px;
+  line-height: 1.3;
+}
+.hero-cta h2 {
+  font-size: italic;
+  font-size: 55px;
+  color: #fce138;
+}
 
 /* HERO STYLES END */
 
 .intro {
-  text-align: center;
 }
 
 .intro p {
@@ -139,10 +150,10 @@ section {
   width: 80%;
   font-size: 20px;
   margin: 0 auto;
+  text-align: center;
 }
 
 .steps {
-  text-align: center;
   background: #fce138;
 }
 
@@ -172,11 +183,12 @@ section {
 
 .section-title {
   font-size: 55px;
-  display: inline-block;
-  padding: 0 100px 20px 100px;
   border-bottom: 3px solid;
-  margin-bottom: 35px;
   color: #fce138;
+  padding-bottom: 20px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50%;
 }
 
 .primary-border {
@@ -188,7 +200,6 @@ section {
 }
 
 .trainers {
-  text-align: center;
 }
 
 .trainer {
@@ -217,6 +228,9 @@ section {
 .text-right {
   text-align: right;
 }
+.flex-row {
+  display: flex;
+}
 
 .trainer-bio h3 {
   font-size: 32px;
@@ -235,7 +249,6 @@ section {
 }
 
 .contact {
-  text-align: center;
   background: #024e76;
 }
 .contact h2 {
