--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,9 +141,6 @@ section {
 
 /* HERO STYLES END */
 
-.intro {
-}
-
 .intro p {
   line-height: 1.7;
   color: #39a6b2;
@@ -157,34 +154,58 @@ section {
   background: #fce138;
 }
 
-.steps div {
-  margin-bottom: 80px;
-}
-
-.steps img {
-  width: 15%;
-  margin: 10px 0;
-}
-
-.steps h3 {
+.step h3 {
   color: #024e76;
   font-size: 46px;
-  margin-top: 10px;
+  flex: 1 30%;
 }
 
-.steps p {
+.step-text p {
   color: #39a6b2;
-  font-size: 23px;
+  font-size: 18px;
 }
 
-.steps span {
-  font-size: 38px;
+.step-text h4 {
+  font-size: 26px;
+  line-height: 1.5;
+  color: #024e76;
+}
+
+.step-info {
+  flex: 2 70%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.step {
+  margin: 50px auto;
+  padding-bottom: 50px;
+  width: 80%;
+  border-bottom: 1px solid #39a6b2;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.step-img {
+  flex: 1 12%;
+  margin-right: 20px;
+}
+
+.step-img img {
+  max-width: 100%;
+}
+
+.step-text {
+  flex: 12;
 }
 
 .section-title {
   font-size: 55px;
   border-bottom: 3px solid;
-  color: #fce138;
+  color: #024e76;
   padding-bottom: 20px;
   text-align: center;
   margin: 0 auto 35px auto;
@@ -197,9 +218,6 @@ section {
 
 .secondary-border {
   border-color: #39a6b2;
-}
-
-.trainers {
 }
 
 .trainer {
