--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ header nav ul li {
 }
 
 header nav ul li a {
-  margin: 0 30px;
+  padding: 10px 15px;
   font-weight: lighter;
   font-size: 1.55vw;
 }
@@ -84,6 +84,7 @@ section {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  align-items: flex-start;
 }
 
 .hero-form {
@@ -131,8 +132,9 @@ section {
   margin: 3.5%;
   color: #fff;
   font-size: 18px;
-  line-height: 1.3;
+  line-height: 1.2;
 }
+
 .hero-cta h2 {
   font-size: italic;
   font-size: 55px;
@@ -203,7 +205,7 @@ section {
 }
 
 .section-title {
-  font-size: 55px;
+  font-size: 48px;
   border-bottom: 3px solid;
   color: #024e76;
   padding-bottom: 20px;
@@ -269,6 +271,9 @@ section {
 .trainer-bio p {
   font-size: 17px;
 }
+/* trainer styles end */
+
+/* reach out styles start */
 
 .contact {
   background: #024e76;
@@ -321,4 +326,26 @@ section {
   text-align: center;
   padding: 15px 0;
   font-size: 16px;
+}
+
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+@media screen and (max-width: 980px) {
+  header h1 a {
+    /* this will be applied on any screen smaller than 980px */
+    color: tomato;
+  }
+}
+
+/* MEDIA QUERY FOR TABLETS AND SMALLER */
+@media screen and (max-width: 768px) {
+  header h1 {
+    /* this will be applied on any screen smaller than 768px */
+    font-size: 80px;
+  }
+}
+
+/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+@media screen and (max-width 575px) {
+  /* this will be applied on any screen smaller than 575px */
+  font-size: 100px;
 }
