--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,13 @@ header {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0px;
+  background-image: url("../images/hero-bg.jpg");
+  background-size: cover;
+  background-position: 80%;
+  background-attachment: fixed;
 }
 
 header h1 {
@@ -24,6 +31,7 @@ header h1 {
   font-size: 36px;
   color: #fce138;
   margin: 0;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 header a {
   text-decoration: none;
@@ -35,7 +43,7 @@ header nav {
 }
 
 header nav ul li {
-  display: flex;
+  display: inline-block;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
@@ -46,6 +54,7 @@ header nav ul li a {
   margin: 0 30px;
   font-weight: lighter;
   font-size: 1.55vw;
+  text-shadow: 0, 0, 10px rgba(0, 0, 0, 0.5);
 }
 
 footer {
@@ -80,10 +89,11 @@ section {
 .hero {
   background-image: url("../images/hero-bg.jpg");
   background-size: cover;
-  background-position: center;
+  background-position: 80%;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  background-position: fixed;
 }
 
 .hero-form {
@@ -91,8 +101,10 @@ section {
   background-color: #fce138;
   padding: 20px;
   color: #024e76;
-  width: 40%;
+  width: 100%;
   margin: 3.5%;
+  box-shadow: 0, 0, 10px rgba(0, 0, 0, 0.5);
+  border-radius: 15px;
 }
 
 .hero-form h3 {
@@ -112,6 +124,7 @@ section {
   color: #024e76;
   width: 100%;
   margin-bottom: 15px;
+  border-radius: 10px;
 }
 
 .hero-form label {
@@ -124,6 +137,7 @@ section {
   border: none;
   padding: 10px 20px;
   font-size: 16px;
+  border-radius: 10px;
 }
 .hero-cta {
   width: 35%;
@@ -137,6 +151,7 @@ section {
   font-size: italic;
   font-size: 55px;
   color: #fce138;
+  text-shadow: 0, 0, 10px rgba(0, 0, 0, 0.5);
 }
 
 /* HERO STYLES END */
@@ -311,6 +326,7 @@ section {
   width: 100%;
   margin-bottom: 15px;
   margin-top: 5px;
+  border-radius: 10px;
 }
 
 .contact-form button {
@@ -321,4 +337,5 @@ section {
   text-align: center;
   padding: 15px 0;
   font-size: 16px;
+  border-radius: 10px;
 }
