--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,13 @@ header {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0px;
+  background-image: url("../images/hero-bg.jpg");
+  background-size: cover;
+  background-position: 80%;
+  background-attachment: fixed;
 }
 
 header h1 {
@@ -24,6 +31,7 @@ header h1 {
   font-size: 36px;
   color: #fce138;
   margin: 0;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 header a {
   text-decoration: none;
@@ -35,17 +43,22 @@ header nav {
 }
 
 header nav ul li {
-  display: flex;
+  display: inline-block;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   list-style: none;
 }
 
-header nav ul li a {
-  padding: 10px 15px;
+header nav ul li a:hover {
+  background: #fce138;
+  color: #024e76;
+  border-radius: 15px;
+  text-shadow: none;
+  margin: 0 30px;
   font-weight: lighter;
   font-size: 1.55vw;
+  text-shadow: 0, 0, 10px rgba(0, 0, 0, 0.5);
 }
 
 footer {
@@ -80,11 +93,11 @@ section {
 .hero {
   background-image: url("../images/hero-bg.jpg");
   background-size: cover;
-  background-position: center;
+  background-position: 80%;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  align-items: flex-start;
+  background-position: fixed;
 }
 
 .hero-form {
@@ -94,6 +107,8 @@ section {
   color: #024e76;
   width: 100%;
   margin: 3.5%;
+  box-shadow: 0, 0, 10px rgba(0, 0, 0, 0.5);
+  border-radius: 15px;
 }
 
 .hero-form h3 {
@@ -113,18 +128,27 @@ section {
   color: #024e76;
   width: 100%;
   margin-bottom: 15px;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255 0.75);
+}
+
+.form-input:focus {
+  background-color: rgba(255, 255, 255, 1);
+  outline: none;
 }
 
 .hero-form label {
   margin: 0 5px;
 }
 
-.hero-form button {
+.hero-form button:hover {
+  background-color: #39a6b2;
   color: #fce138;
   background-color: #024e76;
   border: none;
   padding: 10px 20px;
   font-size: 16px;
+  border-radius: 10px;
 }
 .hero-cta {
   width: 35%;
@@ -132,13 +156,13 @@ section {
   margin: 3.5%;
   color: #fff;
   font-size: 18px;
-  line-height: 1.2;
+  line-height: 1.3;
 }
-
 .hero-cta h2 {
   font-size: italic;
   font-size: 55px;
   color: #fce138;
+  text-shadow: 0, 0, 10px rgba(0, 0, 0, 0.5);
 }
 
 /* HERO STYLES END */
@@ -184,11 +208,15 @@ section {
   margin: 50px auto;
   padding-bottom: 50px;
   width: 80%;
-  border-bottom: 1px solid #39a6b2;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
+  border-bottom: 1px solid #39a6b2;
+}
+
+.step:last-child {
+  border-bottom: none;
 }
 
 .step-img {
@@ -205,7 +233,7 @@ section {
 }
 
 .section-title {
-  font-size: 48px;
+  font-size: 55px;
   border-bottom: 3px solid;
   color: #024e76;
   padding-bottom: 20px;
@@ -218,17 +246,6 @@ section {
   border-color: #fce138;
 }
 
-.trainers {
-  width: 100%;
-  margin: 0 auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-
-.trainer img {
-  width: 100%;
-}
 .secondary-border {
   border-color: #39a6b2;
 }
@@ -240,13 +257,33 @@ section {
   flex: 1;
 }
 
+.trainer img {
+  width: 100%;
+}
+
 .trainer-bio {
   padding: 25px;
   line-height: 1.3;
 }
 
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+
 .flex-row {
   display: flex;
+}
+
+.trainers {
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .trainer-bio h3 {
@@ -262,9 +299,6 @@ section {
 .trainer-bio p {
   font-size: 17px;
 }
-/* trainer styles end */
-
-/* reach out styles start */
 
 .contact {
   background: #024e76;
@@ -307,9 +341,12 @@ section {
   width: 100%;
   margin-bottom: 15px;
   margin-top: 5px;
+  border-radius: 10px;
 }
 
-.contact-form button {
+.contact-form button:hover {
+  color: #fce138;
+  background: #39a6b2;
   width: 100%;
   border: none;
   background: #fce138;
@@ -317,118 +354,5 @@ section {
   text-align: center;
   padding: 15px 0;
   font-size: 16px;
-}
-
-/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
-@media screen and (max-width: 980px) {
-  /* this will be applied on any screen smaller than 980px */
-  header {
-    padding-bottom: 0;
-    justify-content: center;
-  }
-
-  header h1 {
-    width: 100%;
-    text-align: center;
-  }
-
-  header nav ul {
-    margin-top: 20px;
-    width: 100%;
-    justify-content: center;
-  }
-
-  header nav ul li a {
-    font-size: 20px;
-  }
-
-  footer h2,
-  footer div {
-    text-align: center;
-    width: 100%;
-  }
-
-  .hero-cta,
-  .hero-form {
-    width: 100%;
-  }
-
-  .hero-cta {
-    text-align: center;
-  }
-
-  .section-title {
-    width: 80%;
-  }
-
-  .trainer {
-    flex: 0 70%;
-  }
-
-  .contact-info iframe {
-    flex: 1 100%;
-  }
-}
-
-/* MEDIA QUERY FOR TABLETS AND SMALLER */
-@media screen and (max-width: 768px) {
-  /* this will be applied on any screen smaller than 768px */
-  section {
-    padding: 30px 15px;
-  }
-
-  .step h3 {
-    flex: 1 100%;
-    text-align: center;
-    justify-content: center;
-  }
-
-  .step-info {
-    flex: 2 100%;
-    text-align: center;
-    justify-content: center;
-  }
-
-  .step-img {
-    flex: 0 32%;
-    margin-right: 0;
-    margin-top: 15px;
-    margin-bottom: 15px;
-  }
-
-  .step-text {
-    flex: 100%;
-  }
-}
-
-/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
-@media screen and (max-width: 575px) {
-  /* this will be applied on any screen smaller than 575px */
-  .hero-form button {
-    width: 100%;
-  }
-
-  .section-title {
-    width: 95%;
-  }
-
-  .intro p {
-    width: 100%;
-  }
-
-  .trainer {
-    flex: 0 100%;
-  }
-
-  .contact-info {
-    text-align: center;
-  }
-
-  .contact-info > * {
-    flex: 0 100%;
-  }
-
-  .contact-form {
-    order: 3;
-  }
+  border-radius: 10px;
 }
